--- a/E-commerce Project/views/products/index.ejs
+++ b/E-commerce Project/views/products/index.ejs
@@ -1,20 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>All Products</title>
-  </head>
-  <body>
-    <ul>
-      <% for(let item of products) { %>
-      <li>
-        <img src="<%= item.img %>" alt="" />
-        <h3><%= item.name %></h3>
-        <h5><%= item.price %></h5>
-        <p><%= item.desc %></p>
-      </li>
-      <% } %>
-    </ul>
-  </body>
-</html>
+<% layout('layouts/boilerplate') %> <%- include('../partials/navbar') %>
+
+<div class="row">
+  <% for(let item of products) { %>
+
+  <div class="col-lg-4 mt-3">
+    <div class="card mx-auto shadow" style="width: 18rem">
+      <img src="<%= item.img %>" class="card-img-top" />
+      <div class="card-body">
+        <h2 class="card-title"><%= item.name %></h2>
+        <h5 class="card-title"><%= item.price %></h5>
+        <p class="card-text"><%= item.desc %></p>
+        <a href="/products/<%= item.id %>" class="btn btn-info">View Product</a>
+        <form
+          action="/products/<%= item.id %>?_method=DELETE"
+          method="POST"
+          class="d-inline-block"
+        >
+          <button class="btn btn-sm btn-danger">Delete</button>
+        </form>
+      </div>
+    </div>
+  </div>
+  <% } %>
+</div>
