--- a/E-commerce Project/views/products/show.ejs
+++ b/E-commerce Project/views/products/show.ejs
@@ -45,5 +45,21 @@
       </div>
       <button class="btn btn-sm btn-success">Add Review</button>
     </form>
+    <div class="my-3">
+      <% for(let review of foundProduct.reviews){ %>
+      <div class="card">
+        <div class="card-header">Rating: <%= review.rating %></div>
+        <div class="card-body">
+          <h5 class="card-title">Comment:</h5>
+          <p class="card-text"><%= review.comment %></p>
+          <a href="#" class="btn btn-primary">Delete</a>
+        </div>
+        <p class="mx-3">
+          <% if(review.createdAt){ %> <%= review.createdAt.toDateString()%> <% }
+          %>
+        </p>
+      </div>
+      <% } %>
+    </div>
   </div>
 </div>
