E-commerce Project - Update
Cookies

--- a/E-commerce Project/views/products/index.ejs
+++ b/E-commerce Project/views/products/index.ejs
@@ -4,7 +4,7 @@
   <% for(let item of products) { %>
 
   <div class="col-lg-4 mt-3">
-    <div class="card mx-auto shadow" style="width: 18rem">
+    <div class="card mx-auto shadow" style="width: 16rem" ,>
       <img src="<%= item.img %>" class="card-img-top" />
       <div class="card-body">
         <h2 class="card-title"><%= item.name %></h2>
