Lecture 41 - E-Commerce Project
Authentication , Session , Login , Logout , SignUp , User

--- a/Lecture 41 - E-commerce Project/views/products/index.ejs
+++ b/Lecture 41 - E-commerce Project/views/products/index.ejs
@@ -1,4 +1,5 @@
-<% layout('layouts/boilerplate') %> <%- include('../partials/navbar') %>
+<% layout('layouts/boilerplate') %> <%- include('../partials/navbar') %> <%-
+include('../partials/flash') %>
 
 <div class="row">
   <% for(let item of products) { %>
