--- a/Lecture 41 - E-commerce Project/views/layouts/boilerplate.ejs
+++ b/Lecture 41 - E-commerce Project/views/layouts/boilerplate.ejs
@@ -2,15 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Bootstrap CSS -->
+    <!-- bootstrap css -->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
-    <title>Shopping App</title>
+    <!-- fontawesome -->
+    <script
+      src="https://kit.fontawesome.com/2616bc9d69.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- star css -->
+    <link rel="stylesheet" href="/css/star.css" />
+    <title>Shopping Cart</title>
   </head>
   <body>
     <!-- logic for body -->
