--- a/Lecture 41 - E-commerce Project/views/products/edit.ejs
+++ b/Lecture 41 - E-commerce Project/views/products/edit.ejs
@@ -5,8 +5,8 @@
     <form
       action="/products/<%=foundProduct._id%>?_method=PATCH"
       method="POST"
-      novalidate
       class="needs-validation"
+      novalidate
     >
       <div class="mb-3">
         <label for="naam">Name: </label>
@@ -72,19 +72,18 @@
 </div>
 
 <script>
-  // iife -> Immidiately invoked function expression
-  // Example starter JavaScript for disabling form submissions if there are invalid fields
-  (function () {
+  // iife(immidiately invoked functional expression)
+  (() => {
     "use strict";
 
     // Fetch all the forms we want to apply custom Bootstrap validation styles to
-    let forms = document.querySelectorAll(".needs-validation");
+    const forms = document.querySelectorAll(".needs-validation");
 
     // Loop over them and prevent submission
-    Array.prototype.slice.call(forms).forEach(function (form) {
+    Array.from(forms).forEach((form) => {
       form.addEventListener(
         "submit",
-        function (event) {
+        (event) => {
           if (!form.checkValidity()) {
             event.preventDefault();
             event.stopPropagation();
