--- a/Lecture 41 - E-commerce Project/views/products/new.ejs
+++ b/Lecture 41 - E-commerce Project/views/products/new.ejs
@@ -65,17 +65,17 @@
 <script>
   // iife -> Immidiately invoked function expression
   // Example starter JavaScript for disabling form submissions if there are invalid fields
-  (function () {
+  (() => {
     "use strict";
 
     // Fetch all the forms we want to apply custom Bootstrap validation styles to
-    let forms = document.querySelectorAll(".needs-validation");
+    const forms = document.querySelectorAll(".needs-validation");
 
     // Loop over them and prevent submission
-    Array.prototype.slice.call(forms).forEach(function (form) {
+    Array.from(forms).forEach((form) => {
       form.addEventListener(
         "submit",
-        function (event) {
+        (event) => {
           if (!form.checkValidity()) {
             event.preventDefault();
             event.stopPropagation();
