Lecture 41 - E-Commerce Project

--- a/Lecture 41 - E-commerce Project/views/auth/signup.ejs
+++ b/Lecture 41 - E-commerce Project/views/auth/signup.ejs
@@ -27,6 +27,30 @@
       </div>
 
       <div class="mb-3">
+        <p class="mb-2">Want to register as ?</p>
+        <div class="mx-2">
+          <label for="buyer" class="form-label">Buyer:</label>
+          <input
+            type="radio"
+            name="role"
+            id="buyer"
+            class="form-check-input"
+            value="buyer"
+          />
+        </div>
+        <div class="mx-2">
+          <label for="seller" class="form-label">Seller:</label>
+          <input
+            type="radio"
+            name="role"
+            id="seller"
+            class="form-check-input"
+            value="seller"
+          />
+        </div>
+      </div>
+
+      <div class="mb-3">
         <label class="form-label" for="username">Password:</label>
         <input
           class="form-control"
