--- a/Lecture 41 - E-commerce Project/views/partials/navbar.ejs
+++ b/Lecture 41 - E-commerce Project/views/partials/navbar.ejs
@@ -19,17 +19,26 @@
             >Home</a
           >
         </li>
+        <% if(currentUser && currentUser.role === 'seller'){ %>
         <li class="nav-item">
           <a class="nav-link" href="/product/new">New</a>
         </li>
+        <% } %>
       </ul>
       <div class="d-flex" role="search">
         <% if(!currentUser){ %>
         <a href="/login" class="nav-link mx-2">Login</a>
         <% } else { %>
-        <a href="" class="nav-link mx-2">
+        <a href="#" class="nav-link mx-2"
+          >Hello , <%= currentUser.username %></a
+        >
+        <a href="/user/cart" class="nav-link mx-2">
           <i class="fa-solid fa-cart-shopping"></i>
-          <sup><span class="badge bg-danger">2</span></sup>
+          <sup
+            ><span class="badge bg-danger"
+              ><%= currentUser.cart.length %></span
+            ></sup
+          >
         </a>
         <a href="/logout" class="nav-link mx-2">LogOut</a>
         <% } %>
