--- a/Lecture 41 - E-commerce Project/views/products/show.ejs
+++ b/Lecture 41 - E-commerce Project/views/products/show.ejs
@@ -19,12 +19,20 @@ include('../partials/flash') %>
         <h2 class="card-title"><%= foundProduct.name %></h2>
         <h5 class="card-title"><%= foundProduct.price %></h5>
         <p class="card-text"><%= foundProduct.desc %></p>
+        <% if(currentUser && currentUser.role === 'seller'){ %>
         <a
           href="/products/<%=foundProduct._id%>/edit"
           class="btn btn-light btn-sm"
           >Edit</a
         >
-        <a href="#" class="btn btn-secondary btn-sm">Add To Cart</a>
+        <% } %>
+        <form
+          method="POST"
+          action="/user/<%=foundProduct._id%>/add"
+          class="d-inline-block"
+        >
+          <button class="btn btn-secondary btn-sm">Add To Cart</button>
+        </form>
         <a href="#" class="btn btn-primary btn-sm">Buy Product</a>
       </div>
     </div>
